iac/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-box-api
  namespace: recipe-box
  labels:
    app.kubernetes.io/name: recipe-box
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: recipe-box
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
